@@ -1,6 +1,8 @@
 ggplot2 0.7.1  (2008-XX)
 ----------------------------------------
 
+* facet_grid: new support for varying scales in rows and columns
+* scale_discrete_position: empty levels are no longer displayed by default, if you want them, use breaks = levels(myfactor)
 * ggsave: default dpi changed to 300, on the assumption that you are saving the plot for printing
 * scale_gradient: tweak default colours to make more aesthetically pleasing
 * geom_bin: gains drop argument to control whether or not 0 count bins should be removed
